# ECHO

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  REQUIREMENTS.md  TOMORROW.md  pyproject.toml
docs/: ENRICHMENT.md  JARVIS.md  STARTUP.md
engine/echo/: __init__.py  audio.py  bus.py  cli.py  config.py  enrich.py  features.py  ingest.py  models.py  snapshot.py  spotify.py  store.py
